# blocks-game

./: pyproject.toml
blocks_game/: engine.py  main.py
